--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h1>JAMES GAMES</h1>
       </header>
       <main>
+        <img
+          src="images/my_dog.jpg"
+          alt="A fantastic dog, the mascot of James Games!"
+          class="dog-mascot"
+        />
         <p class="tagline">Awesome Games Coming Soon!</p>
         <p class="subtext">Stay tuned for exciting updates and releases.</p>
         <!-- Optional: Add a link to a social media or contact later -->
