--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <main>
         <img
-          src="images/my_dog.jpg"
+          src="images/my_dog.png"
           alt="A fantastic dog, the mascot of James Games!"
           class="dog-mascot"
         />
